--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -501,3 +501,11 @@ WordPress plugin cool-video-gallery:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7527 http://www.vapidlabs.com/advisory.php?v=158'
     fingerprint: detect_general
     post_processing: ['php6.fcgi']
+WordPress plugin gwolle-gb:
+  1:
+    location: ['/wp-content/plugins/gwolle-gb/readme.txt']
+    secure_version: '1.5.4'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8351 https://www.htbridge.com/advisory/HTB23275'
+    fingerprint: detect_general
+    post_processing: ['php6.fcgi']
