--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -517,3 +517,11 @@ WordPress plugin role-scoper:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8353 https://www.htbridge.com/advisory/HTB23276'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin cta:
+  1:
+    location: ['/wp-content/plugins/cta/readme.txt']
+    secure_version: '2.5.1'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8350 https://www.htbridge.com/advisory/HTB23274'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
