--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -150,13 +150,13 @@ WordPress:
     location: ['/wp-includes/version.php', '/wp-includes/vars.php']
     secure_version: '4.4.1'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2016/01/wordpress-4-4-1-security-and-maintenance-release/'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1564 https://wordpress.org/news/2016/01/wordpress-4-4-1-security-and-maintenance-release/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
   2:
     location: ['/b2-include/b2vars.php']
     secure_version: '4.4.1'
     regexp: ['\$b2_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2016/01/wordpress-4-4-1-security-and-maintenance-release/'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1564 https://wordpress.org/news/2016/01/wordpress-4-4-1-security-and-maintenance-release/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
