--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -533,3 +533,11 @@ WordPress plugin ultimate-member:
     cve: 'https://web.nvd.nist.govview/vuln/detail?vulnId=CVE-2015-8354 https://www.htbridge.com/advisory/HTB23277'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wp-symposium-pro:
+  1:
+    location: ['/wp-content/plugins/wp-symposium-pro/readme.txt']
+    secure_version: '16.1'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://seclists.org/bugtraq/2016/Jan/26'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
