--- a/yamls/owncloud.yml
+++ b/yamls/owncloud.yml
@@ -42,25 +42,25 @@
 # oC-SA-2014-016    CVE-2014-3838   6.0.3/5.0.16
 # oC-SA-2014-017    CVE-2014-3839   6.0.3
 # oC-SA-2014-018    CVE-2014-4929   6.0.4/5.0.17
-# OC-SA-2015-001    CVE-2015-3011   7.0.5/6.0.7/5.0.19
-# OC-SA-2015-002    CVE-2015-3012   7.0.5/6.0.7/5.0.19
-# OC-SA-2015-003                    7.0.5/6.0.7/5.0.19 Windows only
-# OC-SA-2015-004    CVE-2015-3013   7.0.5/6.0.7/5.0.19
-# OC-SA-2015-005    CVE-2015-4715   8.0.4/7.0.6/6.0.8
-# OC-SA-2015-006    CVE-2015-4716   8.0.4/7.0.6
-# OC-SA-2015-007    CVE-2015-4717   8.0.4/7.0.6/6.0.8
-# OC-SA-2015-008    CVE-2015-4718   8.0.4/7.0.6/6.0.8
-# OC-SA-2015-009    CVE-2015-4456   Only affects ownCloud Desktop
-# OC-SA-2015-010    CVE-2015-5953   8.0.4/7.0.5
-# OC-SA-2015-011    CVE-2015-5954   8.0.4/7.0.5/6.0.9
-# OC-SA-2015-012    CVE-2015-3996   Only affects ownCloud Mobile
-# OC-SA-2015-013    CVE-2015-5955   Only affects ownCloud Mobile
-# OC-SA-2015-014    CVE-2015-6500   8.1.1/8.0.6
-# OC-SA-2015-015    CVE-2015-6670   8.1.1/8.0.6/7.0.8
-# OC-SA-2015-016    CVE-2015-7298   Only affects ownCloud Desktop
-# OC-SA-2015-017                    8.1.2
-# OC-SA-2015-018                    8.1.2/8.0.7/7.0.9
-# OC-SA-2016-002    CVE-2016-1499   8.2.2/8.1.5/8.0.10
+# oC-SA-2015-001    CVE-2015-3011   7.0.5/6.0.7/5.0.19
+# oC-SA-2015-002    CVE-2015-3012   7.0.5/6.0.7/5.0.19
+# oC-SA-2015-003                    7.0.5/6.0.7/5.0.19 Windows only
+# oC-SA-2015-004    CVE-2015-3013   7.0.5/6.0.7/5.0.19
+# oC-SA-2015-005    CVE-2015-4715   8.0.4/7.0.6/6.0.8
+# oC-SA-2015-006    CVE-2015-4716   8.0.4/7.0.6
+# oC-SA-2015-007    CVE-2015-4717   8.0.4/7.0.6/6.0.8
+# oC-SA-2015-008    CVE-2015-4718   8.0.4/7.0.6/6.0.8
+# oC-SA-2015-009    CVE-2015-4456   Only affects ownCloud Desktop
+# oC-SA-2015-010    CVE-2015-5953   8.0.4/7.0.5
+# oC-SA-2015-011    CVE-2015-5954   8.0.4/7.0.5/6.0.9
+# oC-SA-2015-012    CVE-2015-3996   Only affects ownCloud Mobile
+# oC-SA-2015-013    CVE-2015-5955   Only affects ownCloud Mobile
+# oC-SA-2015-014    CVE-2015-6500   8.1.1/8.0.6
+# oC-SA-2015-015    CVE-2015-6670   8.1.1/8.0.6/7.0.8
+# oC-SA-2015-016    CVE-2015-7298   Only affects ownCloud Desktop
+# oC-SA-2015-017                    8.1.2
+# oC-SA-2015-018                    8.1.2/8.0.7/7.0.9
+# oC-SA-2016-002    CVE-2016-1499   8.2.2/8.1.5/8.0.10
 ownCloud 8.2:
   1:
     location: ['/version.php']
