--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -541,3 +541,11 @@ WordPress plugin wp-symposium-pro:
     cve: 'http://seclists.org/bugtraq/2016/Jan/26'  # CVE request http://www.openwall.com/lists/oss-security/2016/01/07/5
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin crony:
+  1:
+    location: ['/wp-content/plugins/crony/readme.txt']
+    secure_version: '0.4.6'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://github.com/cybersecurityworks/Disclosed/issues/9'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
