--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -557,3 +557,11 @@ WordPress plugin wp-easy-gallery:
     cve: 'http://www.openwall.com/lists/oss-security/2016/01/26/4'  # CVE request
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin eshop:
+  1:
+    location: ['/wp-content/plugins/eshop/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=2016-0765 https://web.nvd.nist.gov/view/vuln/detail?vulnId=2016-0769 http://www.openwall.com/lists/oss-security/2016/02/02/3'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
