--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -562,6 +562,14 @@ WordPress plugin eshop:
     location: ['/wp-content/plugins/eshop/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=2016-0765 https://web.nvd.nist.gov/view/vuln/detail?vulnId=2016-0769 http://www.openwall.com/lists/oss-security/2016/02/02/3'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-0765 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-0769 http://www.openwall.com/lists/oss-security/2016/02/02/3'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress plugin connections:
+  1:
+    location: ['/wp-content/plugins/connections/readme.txt']
+    secure_version: '8.5.9'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-0770 http://www.vapidlabs.com/advisory.php?v=161'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
