--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -573,3 +573,11 @@ WordPress plugin connections:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-0770 http://www.vapidlabs.com/advisory.php?v=161'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin user-meta-manager:
+  1:
+    location: ['/wp-content/plugins/user-meta-manager/readme.txt']
+    secure_version: '3.4.7'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://seclists.org/bugtraq/2016/Feb/34 http://seclists.org/bugtraq/2016/Feb/35'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
