--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -578,6 +578,6 @@ WordPress plugin user-meta-manager:
     location: ['/wp-content/plugins/user-meta-manager/readme.txt']
     secure_version: '3.4.7'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://seclists.org/bugtraq/2016/Feb/34 http://seclists.org/bugtraq/2016/Feb/35'
+    cve: 'http://seclists.org/bugtraq/2016/Feb/34 http://seclists.org/bugtraq/2016/Feb/35'  # CVE requested by Panagiotis Vagenas from MITRE
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
