--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -605,3 +605,11 @@ WordPress plugin duplicator:
     cve: 'http://www.ratiosec.com/2016/duplicator-wordpress-plugin-source-database-disclosure-via-csrf/'  # CVE requested by advisory creator
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin csv-import:
+  1:
+    location: ['/wp-content/plugins/csv-import/readme.txt']
+    secure_version: '1.1'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://seclists.org/bugtraq/2016/Feb/170'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
