--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -621,3 +621,11 @@ WordPress plugin wp-advanced-importer:
     cve: 'http://seclists.org/bugtraq/2016/Feb/171'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wp-ultimate-exporter:
+  1:
+    location: ['/wp-content/plugins/wp-ultimate-exporter/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://seclists.org/bugtraq/2016/Feb/172'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
