--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -39,19 +39,28 @@
 # https://drupal.org/SA-CORE-2015-002   CVE-2015-3231   7.38/6.36   http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-3231
 # https://drupal.org/SA-CORE-2015-003   Requested       7.39/6.37
 # https://drupal.org/SA-CORE-2015-004   CVE-2015-7943   7.41 CWE-20 not in pyfiscan scope
+# https://drupal.org/SA-CORE-2016-001   Requested       8.04/7.43/6.38
+Drupal 8:
+  1:
+    location: ['/core/lib/Drupal.php']
+    secure_version: '8.04'
+    regexp: ["  const VERSION = '(?P<version>[0-9.]+)"]
+    cve: 'https://drupal.org/SA-CORE-2016-001'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
 Drupal 7:
   1:
     location: ['/includes/bootstrap.inc']
-    secure_version: '7.39'
+    secure_version: '7.43'
     regexp: ['define.*?VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://drupal.org/SA-CORE-2015-003'
+    cve: 'https://drupal.org/SA-CORE-2016-001'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 6:
   1:
     location: ['/CHANGELOG.txt']
-    secure_version: '6.37'
+    secure_version: '6.38'
     regexp: ['^Drupal (?P<version>[0-9.]+)']
-    cve: 'https://drupal.org/SA-CORE-2015-003'
+    cve: 'https://drupal.org/SA-CORE-2016-001'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
