--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -645,3 +645,11 @@ WordPress plugin extra-user-details:
     cve: 'http://seclists.org/bugtraq/2016/Feb/166'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin user-submitted-posts:
+  1:
+    location: ['/wp-content/plugins/user-submitted-posts/readme.txt']
+    secure_version: '20160215'
+    regexp: ['Version: (?P<version>[0-9]+)']
+    cve: 'http://seclists.org/bugtraq/2016/Feb/176'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
