--- a/yamls/tikiwiki.yml
+++ b/yamls/tikiwiki.yml
@@ -1,21 +1,21 @@
-# CVE-2005-0200             http://osvdb.org/13119 SA13948
+# CVE-2005-0200             SA13948
 # CVE-2010-4239             http://www.openwall.com/lists/oss-security/2010/11/22/9
 # CVE-2010-4240             http://www.openwall.com/lists/oss-security/2010/11/22/9
 # CVE-2010-4241             http://www.openwall.com/lists/oss-security/2010/11/22/9
-# CVE-2011-4453 2.2.35      http://osvdb.org/77261 http://www.pmwiki.org/wiki/PITS/01271
-# CVE-2011-4336 7.1/6.4     http://osvdb.org/74039 SA45256 SA45283 HTB23027
-# CVE-2011-4454 8.1         http://osvdb.org/77155 SA46740
-# CVE-2011-4455 8.1         http://osvdb.org/77156 SA46740
-# CVE-2011-XXXX 8.2/6.5     http://osvdb.org/77965 SA47278
-# CVE-2011-4551 8.2/6.5     http://osvdb.org/77966 SA47278 http://info.tiki.org/article183-Tiki-Wiki-CMS-Groupware-8-2-and-6-5LTS-Security-Patches-Available
-# CVE-2011-4558 8.3/6.6     http://osvdb.org/78013 SA47320 http://dev.tiki.org/item4059 http://info.tiki.org/article185-Tiki-Security-Patches-Available-for-8-3-and-6-6-LTS
-# CVE-2012-3996 8.4         http://osvdb.org/83533
-# CVE-2012-0911 8.4         http://osvdb.org/83534
+# CVE-2011-4453 2.2.35      http://www.pmwiki.org/wiki/PITS/01271
+# CVE-2011-4336 7.1/6.4     SA45256 SA45283 HTB23027
+# CVE-2011-4454 8.1         SA46740
+# CVE-2011-4455 8.1         SA46740
+# CVE-2011-XXXX 8.2/6.5     SA47278
+# CVE-2011-4551 8.2/6.5     SA47278 http://info.tiki.org/article183-Tiki-Wiki-CMS-Groupware-8-2-and-6-5LTS-Security-Patches-Available
+# CVE-2011-4558 8.3/6.6     SA47320 http://dev.tiki.org/item4059 http://info.tiki.org/article185-Tiki-Security-Patches-Available-for-8-3-and-6-6-LTS
+# CVE-2012-3996 8.4
+# CVE-2012-0911 8.4
 TikiWiki:
   1:
     location: ['/lib/setup/twversion.class.php']
     secure_version: '8.4'
     regexp: ['.*?\$this->version.*?(?P<version>[0-9.]{1,})']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-0911 http://osvdb.org/83534 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-3996 http://osvdb.org/83533'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-0911 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-3996'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
