--- a/yamls/zikula.yml
+++ b/yamls/zikula.yml
@@ -1,11 +1,11 @@
 # URL: http://zikula.org/
-# CVE-2011-0535 1.2.5 http://osvdb.org/70751
-# CVE-2013-6168 1.3.6 http://osvdb.org/98671 https://www.htbridge.com/advisory/HTB23178
+# CVE-2011-0535 1.2.5
+# CVE-2013-6168 1.3.6 https://www.htbridge.com/advisory/HTB23178
 Zikula:
   1:
     location: ['/lib/Zikula/Core.php']
     secure_version: '1.3.6'
     regexp: ['.*?const.*?VERSION_NUM.*?(?P<version>[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-6168 http://osvdb.org/98671 https://www.htbridge.com/advisory/HTB23178'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-6168 https://www.htbridge.com/advisory/HTB23178'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
