--- a/yamls/collabtive.yml
+++ b/yamls/collabtive.yml
@@ -1,13 +1,14 @@
 # URL: http://collabtive.o-dyn.de/
+# CVE-2010-5285
 # CVE-2012-2670
-# CVE-2013-6872 1.2 http://osvdb.org/102123 http://secunia.com/advisories/56329/
-# CVE-2014-3246 2.0 http://osvdb.org/106764
-# CVE-2014-3247 2.0 http://osvdb.org/106765
+# CVE-2013-6872 1.2 http://secunia.com/advisories/56329/
+# CVE-2014-3246 2.0
+# CVE-2014-3247 2.0
 Collabtive:
   1:
     location: ['/changelog.txt']
     secure_version: '2.0'
     regexp: ['.*?Collabtive (?P<version>[0-9.]+)']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-3247 http://osvdb.org/106765'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-3247'
     fingerprint: detect_withoutnewlines
     post_processing: ['php5.fcgi']
