--- a/yamls/cotonti.yml
+++ b/yamls/cotonti.yml
@@ -1,12 +1,12 @@
 # URL: http://www.cotonti.com/
 #  * @package Cotonti
 #  * @version 0.9.14
-# CVE-2013-4789 0.9.14  http://osvdb.org/95842 HTB23164 http://www.cotonti.com/news/announce/siena_0914_released
+# CVE-2013-4789 0.9.14  HTB23164 http://www.cotonti.com/news/announce/siena_0914_released
 Cotonti:
   1:
     location: ['/system/functions.php']
     secure_version: '0.9.14'
     regexp: ['[ \t]\*[ \t]@version[ \t](?P<version>[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-4789 http://osvdb.org/95842 http://www.cotonti.com/news/announce/siena_0914_released'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-4789 http://www.cotonti.com/news/announce/siena_0914_released'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
