--- a/yamls/moinmoin.yml
+++ b/yamls/moinmoin.yml
@@ -59,5 +59,5 @@ MoinMoin:
     location: ['/MoinMoin/version.py']
     secure_version: '1.9.6'
     regexp: ['.*?release.*?(?P<version>[0-9.]{1,})']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-6080 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-6081 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-6082 http://osvdb.org/88825-88828 http://moinmo.in/SecurityFixes'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-6080 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-6081 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-6082 http://moinmo.in/SecurityFixes'
     fingerprint: detect_general
