--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -134,7 +134,7 @@ WordPress plugin revslider:
     location: ['/wp-content/plugins/revslider/revslider.php']
     secure_version: '4.1.5'
     regexp: ['\$revSliderVersion.*?(?P<version>[0-9.]+)']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-1579 https://wpvulndb.com/vulnerabilities/7540 http://osvdb.org/109645'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-1579 https://wpvulndb.com/vulnerabilities/7540'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin nextend-facebook-connect:
