--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -653,3 +653,11 @@ WordPress plugin user-submitted-posts:
     cve: 'http://seclists.org/bugtraq/2016/Feb/176'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin bulk-delete:
+  1:
+    location: ['/wp-content/plugins/bulk-delete/readme.txt']
+    secure_version: '5.5.5'
+    regexp: ['Stable tag: (?P<version>[0-9]+)']
+    cve: 'http://seclists.org/bugtraq/2016/Mar/17'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
