--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -661,3 +661,11 @@ WordPress plugin bulk-delete:
     cve: 'http://seclists.org/bugtraq/2016/Mar/17'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin custom-content-type-manager:
+  1:
+    location: ['/wp-content/plugins/custom-content-type-manager/readme.txt']
+    secure_version: '0.9.8.9'
+    regexp: ['Stable tag: (?P<version>[0-9]+)']
+    cve: 'https://blog.sucuri.net/2016/03/when-wordpress-plugin-goes-bad.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
