--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -658,7 +658,7 @@ WordPress plugin bulk-delete:
   1:
     location: ['/wp-content/plugins/bulk-delete/readme.txt']
     secure_version: '5.5.5'
-    regexp: ['Stable tag: (?P<version>[0-9]+)']
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
     cve: 'http://seclists.org/bugtraq/2016/Mar/17'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
@@ -666,7 +666,7 @@ WordPress plugin custom-content-type-manager:
   1:
     location: ['/wp-content/plugins/custom-content-type-manager/readme.txt']
     secure_version: '0.9.8.9'
-    regexp: ['Stable tag: (?P<version>[0-9]+)']
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
     cve: 'https://blog.sucuri.net/2016/03/when-wordpress-plugin-goes-bad.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
