--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -678,3 +678,11 @@ WordPress plugin wp-super-cache:
     cve: 'http://www.openwall.com/lists/oss-security/2015/04/05/1'  # CVE request
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin soundy-background-music:
+  1:
+    location: ['/wp-content/plugins/soundy-background-music/readme.txt']
+    secure_version: '3.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://seclists.org/bugtraq/2016/Mar/96'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
