--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -54,7 +54,7 @@ WordPress plugin sp-client-document-manager:
     location: ['/wp-content/plugins/sp-client-document-manager/readme.txt']
     secure_version: '2.6.0.0'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://seclists.org/bugtraq/2016/Mar/39'
+    cve: 'http://seclists.org/bugtraq/2016/Mar/39'  # Out scope for CVE
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin floating-social-bar:
