--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -718,3 +718,11 @@ WordPress plugin ad-inserter:
     cve: 'http://seclists.org/bugtraq/2015/May/43'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin appointment-booking-calendar:
+  1:
+    location: ['/wp-content/plugins/appointment-booking-calendar/readme.txt']
+    secure_version: '1.1.8'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7319'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
