--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -762,3 +762,11 @@ WordPress plugin tweet-wheel:
     cve: 'http://seclists.org/bugtraq/2016/Apr/129'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin google-seo-author-snippets:
+  1:
+    location: ['/wp-content/plugins/google-seo-author-snippets/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://seclists.org/bugtraq/2016/Apr/131'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
