--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -794,3 +794,11 @@ WordPress plugin persian-woocommerce-sms:
     cve: 'https://0x62626262.wordpress.com/2016/04/21/persian-woocommerce-sms-xss-vulnerability/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wordpress-seo:
+  1:
+    location: ['/wp-content/plugins/wordpress-seo/readme.txt']
+    secure_version: '3.2.5'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2016/05/yoast-seo-vulnerability/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
