--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -810,3 +810,11 @@ WordPress plugin ninja-forms:
     cve: 'https://www.wordfence.com/blog/2016/05/ninja-forms-shell-upload-vulnerability-high-risk/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wordfence:
+  1:
+    location: ['/wp-content/plugins/wordfence/readme.txt']
+    secure_version: '6.1.7'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2016/05/xss-vulnerability-wordfence-6-1-1-6-1-6-severity-6-1medium/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
