--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -842,3 +842,11 @@ WordPress plugin simple-photo-gallery:
     cve: 'http://www.rootlabs.com.br/xss-simple-photo-gallery/ https://wpvulndb.com/vulnerabilities/8476'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin enhanced-tooltipglossary:
+  1:
+    location: ['/wp-content/plugins/enhanced-tooltipglossary/readme.txt']
+    secure_version: '3.3.5'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://www.vapidlabs.com/wp/wp_advisory.php?v=37 DWF-2016-77246 http://www.openwall.com/lists/oss-security/2016/05/11/12'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
