--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -858,3 +858,11 @@ WordPress plugin tera-charts:
     cve: 'http://www.vapidlabs.com/wp/wp_advisory.php?v=455 DWF-2016-77716 http://www.openwall.com/lists/oss-security/2016/05/11/12'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin pondol-carousel:
+  1:
+    location: ['/wp-content/plugins/pondol-carousel/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://www.vapidlabs.com/wp/wp_advisory.php?v=524 DWF-2016-77531 http://www.openwall.com/lists/oss-security/2016/05/11/12'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
