--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -866,3 +866,11 @@ WordPress plugin pondol-carousel:
     cve: 'http://www.vapidlabs.com/wp/wp_advisory.php?v=524 DWF-2016-77531 http://www.openwall.com/lists/oss-security/2016/05/11/12'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin jetpack:
+  1:
+    location: ['/wp-content/plugins/jetpack/readme.txt']
+    secure_version: '4.0.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2016/05/jetpack-vulnerability/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
