--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -882,3 +882,11 @@ WordPress plugin wp-mobile-detector:
     cve: 'https://blog.sucuri.net/2016/06/wp-mobile-detector-vulnerability-being-exploited-in-the-wild.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin ewww-image-optimizer:
+  1:
+    location: ['/wp-content/plugings/ewww-image-optimizer/readme.txt']
+    secure_version: '2.8.4'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2016/06/vulnerability-ewww-image-optimizer/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
