--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -891,3 +891,11 @@ WordPress plugin ewww-image-optimizer:
     cve: 'https://www.wordfence.com/blog/2016/06/vulnerability-ewww-image-optimizer/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin remote-upload:
+  1:
+    location: ['/wp-content/plugings/remote-upload/readme.txt']
+    secure_version: '1.2.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://bini.tech/wordpress-remote-upload-unrestricted-file-upload/ https://plugins.trac.wordpress.org/changeset/1435503/remote-upload'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
