--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -1,6 +1,6 @@
 # NOT-FOR-US: CVE-2014-6412 only affects Windows platform
-# CVE-2003-1598 "0.72 RC1" http://osvdb.org/4610 SA8954
-# CVE-2003-1599 "0.72 RC1" http://osvdb.org/4611 SA8954 0.70 affected
+# CVE-2003-1598 "0.72 RC1" SA8954
+# CVE-2003-1599 "0.72 RC1" SA8954 0.70 affected
 # CVE-2004-1559 1.2.1
 # CVE-2004-1584 1.2.1
 # CVE-2005-1687 1.5.1
@@ -27,7 +27,7 @@
 # CVE-2006-6017 2.0.5
 # CVE-2006-6808 2.0.6 SA23587
 # CVE-2007-0106 2.0.6
-# CVE-2007-0109 http://osvdb.org/31577 SA23621 The weakness is confirmed in versions 2.0.5 and 3.1.1 and reported in version 1.5. Other versions may also be affected.
+# CVE-2007-0109 SA23621 The weakness is confirmed in versions 2.0.5 and 3.1.1 and reported in version 1.5. Other versions may also be affected.
 # CVE-2007-0539 2.1
 # CVE-2007-0540 2.1
 # CVE-2007-0541 2.1
@@ -48,10 +48,10 @@
 # CVE-2007-4893 2.2.3
 # CVE-2007-4894 2.2.3
 # CVE-2007-5710 2.3.1
-# CVE-2007-6013 2.3.2 http://osvdb.org/40801 SA27714
+# CVE-2007-6013 2.3.2 SA27714
 # CVE-2007-6318 N/A
-# CVE-2007-???? 2.3.2 http://osvdb.org/39518 SA28130
-# CVE-2007-???? http://osvdb.org/34352 SA24951 DoS with pingbacks URLs. Ticket http://trac.wordpress.org/ticket/4137 has status wontfix
+# CVE-2007-???? 2.3.2 SA28130
+# CVE-2007-???? SA24951 DoS with pingbacks URLs. Ticket http://trac.wordpress.org/ticket/4137 has status wontfix
 # CVE-2008-0664 2.3.3
 # CVE-2008-1930 2.5.1
 # CVE-2008-2068 2.5.1
@@ -68,46 +68,48 @@
 # CVE-2009-3890 2.8.6
 # CVE-2009-3891 2.8.6
 # CVE-2010-0682 2.9.2
-# CVE-2010-5106 3.0.3 http://osvdb.org/69761 SA42553
+# CVE-2010-5106 3.0.3 SA42553
 # CVE-2010-5293 3.0.2
 # CVE-2010-5294 3.0.2
 # CVE-2010-5295 3.0.2
 # CVE-2010-5296 3.0.2
 # CVE-2010-5297 3.0.1
-# CVE-2011-0700 3.0.5   http://osvdb.org/72763,72764 SA43238 http://wordpress.org/news/2011/02/wordpress-3-0-5/
-# CVE-2011-0701 3.0.5   http://osvdb.org/72765 SA43238 http://wordpress.org/news/2011/02/wordpress-3-0-5/
-# CVE-2011-1762 3.1.2   http://osvdb.org/72097 SA44372 SA44542 http://wordpress.org/news/2011/04/wordpress-3-1-2/ http://core.trac.wordpress.org/changeset/17710 http://lists.fedoraproject.org/pipermail/package-announce/2011-May/059968.html http://lists.fedoraproject.org/pipermail/package-announce/2011-May/059986.html
-# CVE-2011-3122 3.1.3   http://osvdb.org/74485 http://wordpress.org/news/2011/05/wordpress-3-1-3/
-# CVE-2011-3125 3.1.3   http://osvdb.org/74486 http://wordpress.org/news/2011/05/wordpress-3-1-3/
-# CVE-2011-3126 3.1.3   http://osvdb.org/74487 http://wordpress.org/news/2011/05/wordpress-3-1-3/
-# CVE-2011-3127 3.1.3   http://osvdb.org/74488 http://wordpress.org/news/2011/05/wordpress-3-1-3/
-# CVE-2011-3128 3.1.3   http://osvdb.org/74489 http://wordpress.org/news/2011/05/wordpress-3-1-3/
-# CVE-2011-3129 3.1.3   http://osvdb.org/74490 http://wordpress.org/news/2011/05/wordpress-3-1-3/
-# CVE-2011-3130 3.1.3   http://osvdb.org/74491 http://wordpress.org/news/2011/05/wordpress-3-1-3/
-# CVE-2011-4898/CVE-2011-4899/CVE-2012-0782 3.3.1   http://osvdb.org/7870778708,78709 https://www.trustwave.com/spiderlabs/advisories/TWSL2012-002.txt
-# CVE-2011-4956 3.1.1   http://osvdb.org/72141 SA44038 http://wordpress.org/news/2011/04/wordpress-3-1-1/
-# CVE-2011-4957 3.1.1   http://osvdb.org/72142 SA44038 http://wordpress.org/news/2011/04/wordpress-3-1-1/
+# CVE-2011-0700 3.0.5   SA43238 http://wordpress.org/news/2011/02/wordpress-3-0-5/
+# CVE-2011-0701 3.0.5   SA43238 http://wordpress.org/news/2011/02/wordpress-3-0-5/
+# CVE-2011-1762 3.1.2   SA44372 SA44542 http://wordpress.org/news/2011/04/wordpress-3-1-2/ http://core.trac.wordpress.org/changeset/17710 http://lists.fedoraproject.org/pipermail/package-announce/2011-May/059968.html http://lists.fedoraproject.org/pipermail/package-announce/2011-May/059986.html
+# CVE-2011-3122 3.1.3   http://wordpress.org/news/2011/05/wordpress-3-1-3/
+# CVE-2011-3125 3.1.3   http://wordpress.org/news/2011/05/wordpress-3-1-3/
+# CVE-2011-3126 3.1.3   http://wordpress.org/news/2011/05/wordpress-3-1-3/
+# CVE-2011-3127 3.1.3   http://wordpress.org/news/2011/05/wordpress-3-1-3/
+# CVE-2011-3128 3.1.3   http://wordpress.org/news/2011/05/wordpress-3-1-3/
+# CVE-2011-3129 3.1.3   http://wordpress.org/news/2011/05/wordpress-3-1-3/
+# CVE-2011-3130 3.1.3   http://wordpress.org/news/2011/05/wordpress-3-1-3/
+# CVE-2011-4898 3.3.1
+# CVE-2011-4899 3.3.1
+# CVE-2012-0782 3.3.1   https://www.trustwave.com/spiderlabs/advisories/TWSL2012-002.txt
+# CVE-2011-4956 3.1.1   SA44038 http://wordpress.org/news/2011/04/wordpress-3-1-1/
+# CVE-2011-4957 3.1.1   SA44038 http://wordpress.org/news/2011/04/wordpress-3-1-1/
 # CVE-2011-5270 3.0.6
-# CVE-2011-XXXX 3.1.4   http://osvdb.org/73721 http://osvdb.org/73722 http://osvdb.org/73723 http://wordpress.org/news/2011/06/wordpress-3-1-4/
-# CVE-2012-0287 3.3.1   http://osvdb.org/78123 SA47371 https://wordpress.org/news/2012/01/wordpress-3-3-1/
+# CVE-2011-XXXX 3.1.4   http://wordpress.org/news/2011/06/wordpress-3-1-4/
+# CVE-2012-0287 3.3.1   SA47371 https://wordpress.org/news/2012/01/wordpress-3-3-1/
 # CVE-2012-2399 3.3.2   http://codex.wordpress.org/Version_3.3.2
 # CVE-2012-2400 3.3.2   http://codex.wordpress.org/Version_3.3.2
 # CVE-2012-2401 3.3.2   http://codex.wordpress.org/Version_3.3.2
 # CVE-2012-2402 3.3.2   http://codex.wordpress.org/Version_3.3.2
 # CVE-2012-2403 3.3.2   http://codex.wordpress.org/Version_3.3.2
 # CVE-2012-2404 3.3.2   http://codex.wordpress.org/Version_3.3.2
-# CVE-2012-3383 3.4.1   http://codex.wordpress.org/Version_3.4.1 http://osvdb.org/84340
-# CVE-2012-3384 3.4.1   http://codex.wordpress.org/Version_3.4.1 http://osvdb.org/83357
+# CVE-2012-3383 3.4.1   http://codex.wordpress.org/Version_3.4.1
+# CVE-2012-3384 3.4.1   http://codex.wordpress.org/Version_3.4.1
 # CVE-2012-3385 3.4.1   http://codex.wordpress.org/Version_3.4.1
 # CVE-2012-4421 3.4.2   http://codex.wordpress.org/Version_3.4.2
-# CVE-2012-4448 3.5     http://osvdb.org/85731 SA50715 http://packetstormsecurity.org/files/116785/WordPress-3.4.2-Cross-Site-Request-Forgery.html
-# CVE-2012-5868 N/A     http://osvdb.org/88744 Requested more details from security@wordpress.org 2012-12-29, No fixed version available 2013-01-17. "WordPress does not have any session handling on the server side, so there is no session to invalidate. A cookie can be replayed until it expires. (Its expiration time is enforced in the hash.) We have considered some changes here, but have no immediate plans."
+# CVE-2012-4448 3.5     SA50715 http://packetstormsecurity.org/files/116785/WordPress-3.4.2-Cross-Site-Request-Forgery.html
+# CVE-2012-5868 N/A     WordPress has no plans to fix "Sessions Not Terminated Upon Explicit User Logout" issue
 # CVE-2012-6633 3.3.3   http://codex.wordpress.org/Version_3.3.3
 # CVE-2012-6634 3.3.3
 # CVE-2012-6635 3.3.3
-# CVE-2013-0235 3.5.1   http://osvdb.org/89138 http://wordpress.org/news/2013/01/wordpress-3-5-1/
-# CVE-2013-0236 3.5.1   http://osvdb.org/89576 http://wordpress.org/news/2013/01/wordpress-3-5-1/
-# CVE-2013-0237 3.5.1   http://osvdb.org/89577 http://wordpress.org/news/2013/01/wordpress-3-5-1/
+# CVE-2013-0235 3.5.1   http://wordpress.org/news/2013/01/wordpress-3-5-1/
+# CVE-2013-0236 3.5.1   http://wordpress.org/news/2013/01/wordpress-3-5-1/
+# CVE-2013-0237 3.5.1   http://wordpress.org/news/2013/01/wordpress-3-5-1/
 # CVE-2013-2173 3.5.2   http://wordpress.org/news/2013/06/wordpress-3-5-2/ http://codex.wordpress.org/Version_3.5.2
 # CVE-2013-2199 3.5.2   http://wordpress.org/news/2013/06/wordpress-3-5-2/ http://codex.wordpress.org/Version_3.5.2
 # CVE-2013-2200 3.5.2   http://wordpress.org/news/2013/06/wordpress-3-5-2/ http://codex.wordpress.org/Version_3.5.2
@@ -116,12 +118,12 @@
 # CVE-2013-2203 3.5.2   http://wordpress.org/news/2013/06/wordpress-3-5-2/ http://codex.wordpress.org/Version_3.5.2
 # CVE-2013-2204 3.5.2   http://wordpress.org/news/2013/06/wordpress-3-5-2/ http://codex.wordpress.org/Version_3.5.2
 # CVE-2013-2205 3.5.2   http://wordpress.org/news/2013/06/wordpress-3-5-2/ http://codex.wordpress.org/Version_3.5.2
-# CVE-2013-4144 3.6     http://osvdb.org/92635 http://osvdb.org/83413
+# CVE-2013-4144 3.6
 # CVE-2013-4338 3.6.1   http://codex.wordpress.org/Version_3.6.1
 # CVE-2013-4339 3.6.1   http://codex.wordpress.org/Version_3.6.1
 # CVE-2013-4340 3.6.1   http://codex.wordpress.org/Version_3.6.1
-# CVE-2014-0165 3.8.2/3.7.2 http://codex.wordpress.org/Version_3.8.2 http://codex.wordpress.org/Version_3.7.2 http://osvdb.org/105630
-# CVE-2014-0166 3.8.2/3.7.2 http://codex.wordpress.org/Version_3.8.2 http://codex.wordpress.org/Version_3.7.2 http://osvdb.org/105620
+# CVE-2014-0165 3.8.2/3.7.2 http://codex.wordpress.org/Version_3.8.2 http://codex.wordpress.org/Version_3.7.2
+# CVE-2014-0166 3.8.2/3.7.2 http://codex.wordpress.org/Version_3.8.2 http://codex.wordpress.org/Version_3.7.2
 # CVE-2012-5868 4.0     http://whiteoaksecurity.com/blog/2012/12/17/cve-2012-5868-wordpress-342-sessions-not-terminated-upon-explicit-user-logout http://blog.spiderlabs.com/2014/09/leveraging-lfi-to-get-full-compromise-on-wordpress-sites.html
 # CVE-2014-9031 3.9.3   https://wordpress.org/news/2014/11/wordpress-4-0-1/
 # CVE-2014-9032 4.0.1   https://wordpress.org/news/2014/11/wordpress-4-0-1/
