--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -907,3 +907,11 @@ WordPress plugin profile-builder:
     cve: 'https://www.wordfence.com/blog/2016/07/vulnerability-profile-builder/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin all-in-one-seo-pack:
+  1:
+    location: ['/wp-content/plugings/all-in-one-seo-pack/readme.txt']
+    secure_version: '2.3.7'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_all_in_one_seo_pack_wordpress_plugin.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
