--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -923,3 +923,11 @@ WordPress plugin squirrly-seo:
     cve: 'https://www.wordfence.com/blog/2016/07/2-vulnerabilities-squirrly-seo/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin aryo-activity-log:
+  1:
+    location: ['/wp-content/plugings/aryo-activity-log/readme.txt']
+    secure_version: '2.3.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://seclists.org/fulldisclosure/2016/Jul/25'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
