--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -939,3 +939,11 @@ WordPress plugin yikes-inc-easy-mailchimp-extender:
     cve: 'https://sumofpwn.nl/advisory/2016/easy_forms_for_mailchimp_local_file_inclusion_vulnerability.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wp-fastest-cache:
+  1:
+    location: ['/wp-content/plugings/wp-fastest-cache/readme.txt']
+    secure_version: '0.8.6.0'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://sumofpwn.nl/advisory/2016/wp_fastest_cache_member_local_file_inclusion_vulnerability.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
