--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -956,3 +956,11 @@ WordPress plugin master-slider:
     cve: 'https://sumofpwn.nl/advisory/2016/cross_site_scripting_vulnerability_in_master_slider_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin email-users:
+  1:
+    location: ['/wp-content/plugings/email-users/readme.txt']
+    secure_version: '4.8.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://sumofpwn.nl/advisory/2016/cross_site_scripting_vulnerability_in_email_users_wordpress_plugin.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
